@@ -427,6 +427,8 @@ namespace libtorrent
 		, m_apply_ip_filter(p.flags & add_torrent_params::flag_apply_ip_filter)
 		, m_merge_resume_trackers(p.flags & add_torrent_params::flag_merge_resume_trackers)
 		, m_in_encrypted_list(false)
+		, m_state_subscription(p.flags & add_torrent_params::flag_update_subscribe)
+		, m_in_state_updates(false)
 	{
 #if defined TORRENT_DEBUG || TORRENT_RELEASE_ASSERTS
 		m_resume_data_loaded = false;
@@ -700,6 +702,8 @@ namespace libtorrent
 				get_handle()));
 		}
 
+		state_updated();
+
 		set_state(torrent_status::downloading);
 
 		m_override_resume_data = true;
@@ -855,6 +859,7 @@ namespace libtorrent
 		}
 		m_apply_ip_filter = b;
 		m_policy.ip_filter_updated();
+		state_updated();
 	}
 
 #ifndef TORRENT_DISABLE_DHT
@@ -1001,6 +1006,7 @@ namespace libtorrent
 
 		m_upload_mode = b;
 
+		state_updated();
 		send_upload_only();
 
 		if (m_upload_mode)
@@ -2471,16 +2477,21 @@ ctx->set_verify_callback(verify_function, ec);
  		INVARIANT_CHECK;
 		TORRENT_ASSERT(req.kind == tracker_request::scrape_request);
  
- 		if (complete >= 0) m_complete = complete;
- 		if (incomplete >= 0) m_incomplete = incomplete;
- 		if (downloaders >= 0) m_downloaders = downloaders;
- 
- 		if (m_ses.m_alerts.should_post<scrape_reply_alert>())
- 		{
- 			m_ses.m_alerts.post_alert(scrape_reply_alert(
- 				get_handle(), m_incomplete, m_complete, req.url));
- 		}
- 	}
+		if ((complete >= 0 && m_complete != complete)
+			|| (incomplete >= 0 && m_incomplete != incomplete)
+			|| (downloaders >= 0 && m_downloaders != downloaders))
+			state_updated();
+
+		if (complete >= 0) m_complete = complete;
+		if (incomplete >= 0) m_incomplete = incomplete;
+		if (downloaders >= 0) m_downloaders = downloaders;
+
+		if (m_ses.m_alerts.should_post<scrape_reply_alert>())
+		{
+			m_ses.m_alerts.post_alert(scrape_reply_alert(
+				get_handle(), m_incomplete, m_complete, req.url));
+		}
+	}
  
 	void torrent::tracker_response(
 		tracker_request const& r
@@ -2673,6 +2684,8 @@ ctx->set_verify_callback(verify_function, ec);
 				++m_ses.m_boost_connections;
 			}
 		}
+
+		state_updated();
 	}
 
 	ptime torrent::next_announce() const
@@ -3061,6 +3074,8 @@ ctx->set_verify_callback(verify_function, ec);
 
 		TORRENT_ASSERT(!m_picker->have_piece(index));
 
+		state_updated();
+
 		// even though the piece passed the hash-check
 		// it might still have failed being written to disk
 		// if so, piece_picker::write_failed() has been
@@ -3176,6 +3191,7 @@ ctx->set_verify_callback(verify_function, ec);
 				, index));
 		}
 
+		state_updated();
 		m_need_save_resume_data = true;
 
 		remove_time_critical_piece(index, true);
@@ -3593,6 +3609,7 @@ ctx->set_verify_callback(verify_function, ec);
 			write_resume_data(*j.resume_data);
 			alerts().post_alert(save_resume_data_alert(j.resume_data
 				, get_handle()));
+			state_updated();
 		}
 	}
 
@@ -3828,6 +3845,8 @@ ctx->set_verify_callback(verify_function, ec);
 			update_peer_interest(was_finished);
 			remove_time_critical_pieces(pieces);
 		}
+
+		state_updated();
 	}
 
 	void torrent::piece_priorities(std::vector<int>* pieces) const
@@ -4178,6 +4197,7 @@ ctx->set_verify_callback(verify_function, ec);
 		TORRENT_ASSERT(m_num_uploads > 0);
 		if (!c.send_choke()) return false;
 		--m_num_uploads;
+		state_updated();
 		return true;
 	}
 	
@@ -4194,6 +4214,7 @@ ctx->set_verify_callback(verify_function, ec);
 		if (m_num_uploads >= m_max_uploads && !optimistic) return false;
 		if (!c.send_unchoke()) return false;
 		++m_num_uploads;
+		state_updated();
 		return true;
 	}
 
@@ -5288,7 +5309,6 @@ ctx->set_verify_callback(verify_function, ec);
 		file_priority.clear();
 		for (int i = 0, end(m_file_priority.size()); i < end; ++i)
 			file_priority.push_back(m_file_priority[i]);
-
 	}
 
 	void torrent::get_full_peer_list(std::vector<peer_list_entry>& v) const
@@ -5846,6 +5866,8 @@ ctx->set_verify_callback(verify_function, ec);
 
 		send_upload_only();
 
+		state_updated();
+
 		m_completed_time = time(0);
 
 		// disconnect all seeds
@@ -6294,7 +6316,10 @@ ctx->set_verify_callback(verify_function, ec);
 	void torrent::set_sequential_download(bool sd)
 	{
 		TORRENT_ASSERT(m_ses.is_network_thread());
+		if (m_sequential_download == sd) return;
 		m_sequential_download = sd;
+
+		state_updated();
 	}
 
 	void torrent::queue_up()
@@ -6316,6 +6341,8 @@ ctx->set_verify_callback(verify_function, ec);
 			|| (m_abort && p == -1));
 		if (is_finished() && p != -1) return;
 		if (p == m_sequence_number) return;
+
+		state_updated();
 
 		session_impl::torrent_map& torrents = m_ses.m_torrents;
 		if (p >= 0 && m_sequence_number == -1)
@@ -6386,6 +6413,7 @@ ctx->set_verify_callback(verify_function, ec);
 		TORRENT_ASSERT(m_ses.is_network_thread());
 		TORRENT_ASSERT(limit >= -1);
 		if (limit <= 0) limit = (std::numeric_limits<int>::max)();
+		if (m_max_uploads != limit) state_updated();
 		m_max_uploads = limit;
 	}
 
@@ -6394,6 +6422,7 @@ ctx->set_verify_callback(verify_function, ec);
 		TORRENT_ASSERT(m_ses.is_network_thread());
 		TORRENT_ASSERT(limit >= -1);
 		if (limit <= 0) limit = (std::numeric_limits<int>::max)();
+		if (m_max_connections != limit) state_updated();
 		m_max_connections = limit;
 
 		if (num_peers() > int(m_max_connections))
@@ -6446,6 +6475,8 @@ ctx->set_verify_callback(verify_function, ec);
 		TORRENT_ASSERT(m_ses.is_network_thread());
 		TORRENT_ASSERT(limit >= -1);
 		if (limit <= 0) limit = 0;
+		if (m_bandwidth_channel[peer_connection::upload_channel].throttle() != limit)
+			state_updated();
 		m_bandwidth_channel[peer_connection::upload_channel].throttle(limit);
 	}
 
@@ -6462,6 +6493,8 @@ ctx->set_verify_callback(verify_function, ec);
 		TORRENT_ASSERT(m_ses.is_network_thread());
 		TORRENT_ASSERT(limit >= -1);
 		if (limit <= 0) limit = 0;
+		if (m_bandwidth_channel[peer_connection::download_channel].throttle() != limit)
+			state_updated();
 		m_bandwidth_channel[peer_connection::download_channel].throttle(limit);
 	}
 
@@ -6502,6 +6535,8 @@ ctx->set_verify_callback(verify_function, ec);
 		m_error = error_code();
 		m_error_file.clear();
 
+		state_updated();
+
 		// if we haven't downloaded the metadata from m_url, try again
 		if (!m_url.empty() && !m_torrent_file->is_valid())
 		{
@@ -6541,6 +6576,8 @@ ctx->set_verify_callback(verify_function, ec);
 			dequeue_torrent_check();
 			set_state(torrent_status::queued_for_checking);
 		}
+
+		state_updated();
 	}
 
 	void torrent::auto_managed(bool a)
@@ -6551,6 +6588,8 @@ ctx->set_verify_callback(verify_function, ec);
 		if (m_auto_managed == a) return;
 		bool checking_files = should_check_files();
 		m_auto_managed = a;
+
+		state_updated();
 
 		// we need to save this new state as well
 		m_need_save_resume_data = true;
@@ -6665,6 +6704,7 @@ ctx->set_verify_callback(verify_function, ec);
 		m_need_save_resume_data = false;
 		m_last_saved_resume = time(0);
 		m_save_resume_flags = boost::uint8_t(flags);
+		state_updated();
 
 		TORRENT_ASSERT(m_storage);
 		if (m_state == torrent_status::queued_for_checking
@@ -6734,6 +6774,7 @@ ctx->set_verify_callback(verify_function, ec);
 
 		// we need to save this new state
 		m_need_save_resume_data = true;
+		state_updated();
 
 		bool prev_graceful = m_graceful_pause_mode;
 		m_graceful_pause_mode = graceful;
@@ -6764,6 +6805,8 @@ ctx->set_verify_callback(verify_function, ec);
 			} TORRENT_CATCH (std::exception&) {}
 		}
 #endif
+
+		state_updated();
 
 #if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_ERROR_LOGGING || defined TORRENT_LOGGING
 		log_to_all_peers("PAUSING TORRENT");
@@ -6925,6 +6968,8 @@ ctx->set_verify_callback(verify_function, ec);
 
 		if (alerts().should_post<torrent_resumed_alert>())
 			alerts().post_alert(torrent_resumed_alert(get_handle()));
+
+		state_updated();
 
 		m_started = time_now();
 		clear_error();
@@ -7155,6 +7200,9 @@ ctx->set_verify_callback(verify_function, ec);
 			// let the stats fade out to 0
 			accumulator += m_stat;
  			m_stat.second_tick(tick_interval_ms);
+			// if the rate is 0, there's no update because of network transfers
+			if (m_stat.low_pass_upload_rate() > 0 || m_stat.low_pass_download_rate() > 0)
+				state_updated();
 			return;
 		}
 
@@ -7250,6 +7298,10 @@ ctx->set_verify_callback(verify_function, ec);
 		m_total_uploaded += m_stat.last_payload_uploaded();
 		m_total_downloaded += m_stat.last_payload_downloaded();
 		m_stat.second_tick(tick_interval_ms);
+
+		// if the rate is 0, there's no update because of network transfers
+		if (m_stat.low_pass_upload_rate() > 0 || m_stat.low_pass_download_rate() > 0)
+			state_updated();
 	}
 
 	void torrent::recalc_share_mode()
@@ -7697,6 +7749,8 @@ ctx->set_verify_callback(verify_function, ec);
 		TORRENT_ASSERT(m_ses.is_network_thread());
 		peer_id id(0);
 		m_policy.add_peer(adr, id, source, 0);
+
+		state_updated();
 	}
 
 	void torrent::async_verify_piece(int piece_index, boost::function<void(int)> const& f)
@@ -7944,6 +7998,8 @@ ctx->set_verify_callback(verify_function, ec);
 			m_ses.m_alerts.post_alert(state_changed_alert(get_handle(), s, (torrent_status::state_t)m_state));
 		m_state = s;
 
+		state_updated();
+
 #ifndef TORRENT_DISABLE_EXTENSIONS
 		for (extension_list_t::iterator i = m_extensions.begin()
 			, end(m_extensions.end()); i != end; ++i)
@@ -7968,6 +8024,17 @@ ctx->set_verify_callback(verify_function, ec);
 		}
 	}
 #endif
+
+	void torrent::state_updated()
+	{
+		// we're either not subscribing to this torrent, or
+		// it has already been updated this round, no need to
+		// add it to the list twice
+		if (!m_state_subscription || m_in_state_updates) return;
+
+		m_ses.m_state_updates.push_back(shared_from_this());
+		m_in_state_updates = true;
+	}
 
 	void torrent::status(torrent_status* st, boost::uint32_t flags)
 	{
